--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.23.0",
+    "less": "^4.2.0",
     "prettier": "^3.2.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.8"
